--- a/css/style.css
+++ b/css/style.css
@@ -26,3 +26,82 @@
 .text-vertical {
     writing-mode: vertical-lr;
 }
+.bg-dark-light {
+    background-color:rgba(26, 26, 26, .95);
+}
+.bg-dark {
+    background-color: #1A1A1A;
+}
+.bg-menu {
+    background-image: url('../icon/menu.svg');
+}
+.bg-close {
+    transform: rotateZ(90deg);
+    background-image: url('../icon/close.svg');
+}
+.expand-menu {
+    animation: expand 1s forwards;
+}
+@keyframes expand {
+    0%{height: 0;}
+    100%{height: 100vh;}
+}
+.button-primary {  
+    background-color: var(--primary);
+    color: black;
+    font-weight: bold;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+}
+@media screen and (max-width:767px) {
+    #social-media {
+        margin-top: 35%;
+    }
+    #img-perfil {
+            width: 250px;
+    }
+}
+
+@media screen and (min-width:768px) and (max-width:900px) {
+    #menu {
+        flex-direction: column;
+        justify-content: flex-start;
+    }
+    #btn-menu {
+        display: block;
+    }
+    #menu ul {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: 0;
+    }
+    #menu ul li {
+        padding: 15px 0;
+        font-size: 20px;
+        margin: 0;
+    }
+    #menu ul li:nth-child(1) {
+        margin-top: 20px;
+    }
+    .ul-full {
+        height: 100% !important;
+    }
+    #continer-img {
+        align-items: flex-start;
+        margin: 0;
+    }
+    /* #img-perfil {
+        margin-top: 100px;
+    } */
+
+}
+
+@media screen and (min-width:360px) and (max-width:639px) {
+    section div h1 {
+        font-size: 1.875rem !important;
+    }
+}
+/* w-11/12 sm:w-1/2 md:w-1/2 */
+
