arreglos en del boton menu portafolio e imagenes portafolio

--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,16 @@
     --primary:#36ff9b; 
     --secundary: #aaaaaa;
 }
+::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+    background: #1A1A1A;
+}
+::-webkit-scrollbar-thumb {
+    background: #151515;
+    opacity: 0.05;
+    border-radius: 5px;
+}
 .text-primary {
     color: var(--primary);
 }
@@ -112,7 +122,9 @@
 .item div img {
     cursor: pointer;
 }
-
+.box-shadow {
+    box-shadow: none;
+}
 @media screen and (max-width:767px) {
     #social-media {
         margin-top: 35%;
@@ -183,6 +195,24 @@
     }
     #data {
         font-size: 13px;
+    }
+}
+
+@media screen and (max-width:639px) {
+    .item-select::before {
+        width: 10px !important;
+        height: 10px !important;
+        background-color: var(--primary);
+        border: 0 !important;
+        left: 100%;
+        border-radius: 50%;
+    }
+    .box-shadow {
+        box-shadow: 0 3px 6px rgba(0, 0, 0, .25);
+    }
+    /*ESMITH -- QUITAR LINEAS DE MENU PORTAFOLIO*/
+    #menu-potfolio ul li::before {
+        border: none;
     }
 }
 /* w-11/12 sm:w-1/2 md:w-1/2 */
